fix overflowing map

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@ $rubik:'Rubik', sans-serif;;
 }
 body{
     margin: 0 auto;
-    height: 100vh;
+    
 }
 img{
     max-width: 100%;
@@ -134,7 +134,7 @@ h1,h2,h3,h4{
 // mobile
 @media(min-width:700px){ // on screens 700px or less
     .hero {
-        height: 300px;
+        height: 35vh;
     }
     .info{
         .info__header{
